--- a/index.html
+++ b/index.html
@@ -48,14 +48,17 @@
         <section>
             <q>
                 Pretend you're in Git Bash doing an interactive rebase or tagging a release.  Your console opens
-                the git-generated temporary file in Vim, since you configured it that way when you installed it...  
+                the git-generated temporary file in Vim, since you configured Git that way when you installed it...  
             </q>
             <br>
-            <q class="fragment">
-                But when you attempt to
-                open the file, you discover that your key presses aren't inserting new letters, and CTRL-C won't exit
-                the application like normal.  What now?
-            </q>
+            <div class="fragment">
+                <q>
+                    But when you attempt to
+                    open the file, you discover that your keypresses aren't inserting new letters, and CTRL-C won't exit
+                    the application like normal.  What now?
+                </q>
+                <img src="https://media.giphy.com/media/v0eHX3n28wvoQ/giphy.gif"/>
+            </div>
             <br>
             <span class="fragment">(cue demo - file: <code style="color:#ff2c2d"><code style="color:#ff2c2d">basics.js</code></code>)</span>
         </section>
@@ -92,14 +95,18 @@
         </section>
 
         <section>
+            <img src="https://code.visualstudio.com/assets/docs/getstarted/keybinding/show-conflicts-menu.png" />
+        </section>
+
+        <section>
             <h2>Motions and Text Objects</h2>
             <p>In normal mode, vim has a ton of <strong><em>motions</em></strong> and <strong><em>text
                     objects</em></strong> that let you tell it how to move the cursor and how to select text.</p>
 
-            <p class="fragment">One of the pieces of "common newbie wisdom" is to increase speed by using hjkl instead
+            <p class="fragment">One of the pieces of "common newbie wisdom" is to increase speed by using <code class="fragment highlight-green">hjkl</code> instead
             of the arrows to move in normal mode.</p>
 
-            <p class="fragment">That helps a bit since you stay on home row, but hjkl is really for small
+            <p class="fragment">That helps a bit since you stay on home row, but <code class="highlight-green">hjkl</code> is really for small
             adjustments and should be your last resort.  Vim has way better mechanisms for movement.</p>
         </section>
 
@@ -108,25 +115,25 @@
             <p>Motions let you jump efficiently around in text.  Some examples:</p>
             <ul class="fragment">
                 <li><code class="fragment highlight-green">w</code> - 
-                    <code class="fragment highlight-blue">f</code>orward 
-                    <code class="fragment highlight-blue">t</code>o 
-                    <code class="fragment highlight-blue">n</code>ext 
-                    <code class="fragment highlight-blue">w</code>ord (first character)
+                    <span class="fragment highlight-blue">f</span>orward 
+                    <span class="fragment highlight-blue">t</span>o 
+                    <span class="fragment highlight-blue">n</span>ext 
+                    <span class="fragment highlight-blue">w</span>ord (first character)
                 </li>
                 <li><code class="fragment highlight-green">e</code> - 
-                    forwar<code class="fragment highlight-blue">d</code>
-                    t<code class="fragment highlight-blue">o</code>
-                    en<code class="fragment highlight-blue">d</code>
-                    o<code class="fragment highlight-blue">f</code>
-                    wor<code class="fragment highlight-blue">d</code> (last character)
+                    forwar<span class="fragment highlight-blue">d</span>
+                    t<span class="fragment highlight-blue">o</span>
+                    en<span class="fragment highlight-blue">d</span>
+                    o<span class="fragment highlight-blue">f</span>
+                    wor<span class="fragment highlight-blue">d</span> (last character)
                 </li>
                 <li><code class="fragment highlight-green">fc</code> - 
-                    forward to next o<code class="fragment highlight-blue">c</code><code class="fragment highlight-blue">c</code>urrence of 
-                        <code class="fragment highlight-blue">c</code>
+                    forward to next o<span class="fragment highlight-blue">c</span><span class="fragment highlight-blue">c</span>urrence of 
+                        <span class="fragment highlight-blue">c</span>
                          (; to repeat!)
                 </li>
                 <li><code class="fragment highlight-green">tc</code> - forward 'til next 
-                    <code class="fragment highlight-blue">o</code>ccurence of c (to character before)
+                    <span class="fragment highlight-blue">o</span>ccurence of c (to character before)
                 </li>
             </ul>
         </section>
@@ -134,7 +141,7 @@
         <section>
             <h2>Motions and <span style="color:#17ff2e">Text Objects</span></h2>
             <p>The concept of "text objects" allows <em>precise selections</em>.  Particularly powerful are objects
-            combined with the `i` and `a` modifiers:
+            combined with the <code>i</code> and <code>a</code> modifiers:
                 <ul class="fragment">
                     <li><code class="fragment highlight-green">i(</code> - (<span class="fragment highlight-blue">inner parentheses</span>)</li>
                     <li><code class="fragment highlight-green">a(</code> - <span class="fragment highlight-blue">(a set of parentheses)</span></li>
@@ -162,7 +169,7 @@
                 flow (IMO, esp on command line)</li>
                 <li class="fragment">Each new operation/motion/text object dramatically increases the "commands" you
                 know since it's all composable!</li>
-                <li class="fragment">You can define your own motions/objects (e.g., ruby block) or operators (e.g., vim-surround)!</li>
+                <li class="fragment">You can define your own motions/objects (e.g., javascript block) or operators (e.g., vim-surround)!</li>
             </ul>
         </section>
 
@@ -182,7 +189,7 @@
             </q>
             <br>
             <q class="fragment">
-                Enter the <code>.</code> (dot) command.
+                Enter the <code>`.`</code> (dot) command.
             </q>
             <p class="fragment">(cue demo - file: <code style="color:#ff2c2d">MoveOpRepeat.cs</code>)</p>
         </section>
@@ -214,8 +221,6 @@
             </ol>
         </section>
 
-
-
         <section>
             <h1>What now?</h1>
         </section>
@@ -228,7 +233,7 @@
                 to start; Or try the real thing if you are feeling adventurous.  (warning: <strong>A LOT</strong> more configuration required!)</li>
                 <li class="fragment">Get back to "pre-vim" productivity, then <strong>exceed it</strong>...  Hopefully shouldn't
                 take long.</li>
-                <li class="fragment">How?  Practice!</li>
+                <li class="fragment">How?</li>
             </ul>
         </section>
 
@@ -258,16 +263,22 @@
                 <li>visual studio: vsvim</li>
                 <li>firefox: vimperator, pentadactyl</li>
             </ul>
+            <p class="fragment">(cue demo: <code style="color:#ff2c2d">Oni</code>)</p>
         </section>
 
         <section>
-            <h2>Plugins (how "true" Vim is extended)</h2>
-            <ul class="fragment">
-                <li>Use pathogen!! (or vundle)</li>
-                <li>ctrl-p</li>
-                <li>dispatch</li>
-                <li>vim-surround</li>
-                <li>(Basically anything Tim Pope)</li>
+            <h2>VIM Adventures!</h2>
+            <img style="display: inline; max-width: 65%; max-height: 65%;" src="https://steemitimages.com/0x0/https://steemitimages.com/DQmPjFHoZPhdfCX1vBBXGJVfJd2uZHJhWDD1TyfndByjgRp/Screen%20Shot%202018-01-29%20at%204.04.08%20PM.89acf1dbeb7c4b509fdd0f07db3c3ce1.png"/>
+            <img style="display: inline; max-width: 65%; max-height: 65%;" src="https://steemitimages.com/0x0/https://steemitimages.com/DQmUqsdD4skwYt5YgSPgnEgFCfLrnjayXZV7VeSf212hdUB/sky.a078bfab0b1341888ab0bc5faa9443f2.gif"/>
+        </section>
+
+        <section>
+            <h2>What about my IDE?</h2>
+            <ul>
+                <li class="fragment">Modal editing is just the beginning</li>
+                <li class="fragment">With extensions, VIM can surpass traditional IDEs as well as classic text editors</li>
+                <li class="fragment">Some things are going to be much more difficult to replace</li>
+                <li class="fragment">A power user's playground</li>
             </ul>
             <div class="fragment">
                 <img src="http://i.imgur.com/jSCwGjU.gif?1" style="max-width: 80%; max-width: 80%;"/>
